Fix ambox overlapping

--- a/wikipedia/common.css
+++ b/wikipedia/common.css
@@ -126,7 +126,9 @@ table.plainlinks {
 }
 
 
-
+table.ambox + table.ambox {
+	margin-top: 5px;
+}
 
 
 
